checkstyle in swing